--- a/package.json
+++ b/package.json
@@ -1,5 +1,13 @@
 {
   "devDependencies": {
     "typescript": "^5.6.3"
+  },
+  "dependencies": {
+    "@types/express": "^5.0.0",
+    "@types/socket.io": "^3.0.2",
+    "express": "^4.21.1",
+    "mysql2": "^3.11.3",
+    "socket.io": "^4.8.0",
+    "tigerbeetle-node": "^0.16.9"
   }
 }
