--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
     "typescript": "^5.6.3"
   },
   "dependencies": {
+    "@interledger/open-payments": "^6.13.2",
     "@types/express": "^5.0.0",
     "@types/socket.io": "^3.0.2",
     "express": "^4.21.1",
     "mysql2": "^3.11.3",
     "socket.io": "^4.8.0",
+    "sqlite": "^5.1.1",
+    "sqlite3": "^5.1.7",
     "tigerbeetle-node": "^0.16.9"
   }
 }
