--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@interledger/open-payments": "^6.13.2",
     "@types/express": "^5.0.0",
     "@types/socket.io": "^3.0.2",
+    "cors": "^2.8.5",
     "express": "^4.21.1",
     "mysql2": "^3.11.3",
     "socket.io": "^4.8.0",
